Add xml files to build gradle file